header menu links

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="header-content">
       <div class="header-logo">
-        <a href="#"><span>Alan Vollmar</span></a>
+        <a href="index.html"><span>Alan Vollmar</span></a>
       </div>
       <menu class="header-menu">
         <li><a href="about.html">About</a></li>
@@ -26,7 +26,7 @@
         <li><a href="modules.html">Modules</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="creative.html">Creative</a></li>
-        <li><a href="validation.html">Validation</a></li>
+        <li><a href="validated.html">Validation</a></li>
       </menu>
     </div>
   </header>
