--- a/midterm/index.html
+++ b/midterm/index.html
@@ -3,9 +3,47 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Alan V | Midterm Project</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/open-sans-y2k" type="text/css"/> <!-- Open Sans Font -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+
+
+
+  <title>Alan V | Home</title>
 </head>
 <body>
+<!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
+<div class="container">
+  <header class="header">
+    <div class="header-content">
+      <div class="header-logo">
+        <a href="index.html"><span>Alan Vollmar</span></a>
+      </div>
+      <menu class="header-menu">
+        <li><a href="about.html">About</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="artifacts.html">Artifacts</a></li>
+        <li><a href="modules.html">Modules</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="creative.html">Creative</a></li>
+        <li><a href="validated.html">Validation</a></li>
+      </menu>
+    </div>
+  </header>
+  <main class="page-body">
+    <div class="wrapper wrapper-home">
+      <h1>Welcome!</h1>
+      <p>
+        This is a site built entirely from scratch, so feel free to appreciate the painstakingly massive amount of work required to ensure the header and footer, and their menu markup, is all uniform.
+        </p>
+      <h2>Click links, do things.</h2>
+      <p>
+        Explore, root around, see if you find any internet nuggets buried in these handful of pages.
+        </p>
+    </div>
+  </main>
+  <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
+</div>
 
 </body>
 </html>
