about page, with heading underline

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -33,6 +33,7 @@
   <main class="page-body">
     <div class="wrapper">
       <h1>About</h1>
+      <hr class="title-underline">
       <div class="center">
         <h2>Hello There</h2>
         <p>
