--- a/midterm/about.html
+++ b/midterm/about.html
@@ -47,7 +47,7 @@
       <p>
         My goals are simple: Eat 64 slices of Kraft American Cheese* in one sitting.
       </p>
-      <p style="float:right; font-size: 12px;">American Cheese 'PRODUCT'</p>
+      <p style="float:right; font-size: 12px;">*American Cheese 'PRODUCT'</p>
     </div>
   </main>
   <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
