--- a/midterm/about.html
+++ b/midterm/about.html
@@ -9,7 +9,7 @@
 
 
 
-  <title>Alan V | Template</title>
+  <title>Alan V | About</title>
 </head>
 <body>
 <!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
