courses - line break

--- a/midterm/courses.html
+++ b/midterm/courses.html
@@ -36,7 +36,7 @@
       <hr class="title-underline">
         <h2>Intro to Web Dev</h2>
         <p>
-        <strong>DEV109 | Adam Brehm</strong>
+        <strong>DEV109 | Adam Brehm</strong><br />
         <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Learn More...</a>
         </p>
       <h3>Experience & What to Gain</h3>
