multiple courses - courses.html

--- a/midterm/courses.html
+++ b/midterm/courses.html
@@ -34,6 +34,7 @@
     <div class="wrapper">
       <h1>Courses</h1>
       <hr class="title-underline">
+      <section>
         <h2>Intro to Web Dev</h2>
         <p>
         <strong>DEV109 | Adam Brehm</strong><br />
@@ -46,6 +47,35 @@
         </p>
         <p>I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.</p>
       </p>
+      </section>
+      <section>
+        <h2>Intro to Web Dev</h2>
+        <p>
+        <strong>DEV109 | Adam Brehm</strong><br />
+        <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Learn More...</a>
+        </p>
+      <h3>Experience & What to Gain</h3>
+      <p>
+        <p>
+        I've spent over 10 years in marketing for multiple B2B SaaS solutions, mainly in the MSP space, both as a vendor and a solution. Managing multiple sites on different CMS has helped me learn the ins and outs of both content management and front-end development.
+        </p>
+        <p>I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.</p>
+      </p>
+      </section>
+      <section>
+        <h2>Intro to Web Dev</h2>
+        <p>
+        <strong>DEV109 | Adam Brehm</strong><br />
+        <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Learn More...</a>
+        </p>
+      <h3>Experience & What to Gain</h3>
+      <p>
+        <p>
+        I've spent over 10 years in marketing for multiple B2B SaaS solutions, mainly in the MSP space, both as a vendor and a solution. Managing multiple sites on different CMS has helped me learn the ins and outs of both content management and front-end development.
+        </p>
+        <p>I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.</p>
+      </p>
+      </section>
     </div>
   </main>
   <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
