--- a/midterm/artifacts.html
+++ b/midterm/artifacts.html
@@ -34,6 +34,7 @@
     <div class="wrapper">
       <h1>Artifacts</h1>
       <hr class="title-underline">
+      <div class="clearfix"></div>
       <div class="col-2">
         <h2>Hello There</h2>
         <p>
@@ -52,6 +53,36 @@
         My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
         </p>
       </div>
+      <div class="clearfix"></div>
+      <div class="col-2">
+        <h2>Hello There</h2>
+        <p>
+        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        </p>
+        <p>
+        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
+        </p>
+      </div>
+      <div class="col-2">
+        <h2>Hello There</h2>
+        <p>
+        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        </p>
+        <p>
+        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
+        </p>
+      </div>
+      <div class="clearfix"></div>
+      <div class="col-2">
+        <h2>Hello There</h2>
+        <p>
+        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        </p>
+        <p>
+        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
+        </p>
+      </div>
+      <div class="clearfix"></div>
     </div>
   </main>
   <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
