artifacts.html - content

--- a/midterm/artifacts.html
+++ b/midterm/artifacts.html
@@ -36,52 +36,28 @@
       <hr class="title-underline">
       <div class="clearfix"></div>
       <div class="col-2">
-        <h2>Hello There</h2>
+        <h2>Resume</h2>
         <p>
-        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        Create a one page resume with HTML, including styling.
         </p>
-        <p>
-        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
-        </p>
+        <p><a href="https://avollmar-bc.github.io/dev109/a1/index.html" target="_blank">Full Project Here...</a></p>
       </div>
       <div class="col-2">
-        <h2>Hello There</h2>
+        <h2>Chessboard</h2>
         <p>
-        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        Create a chessboard, including pieces, using a mix of HTML and CSS, including Classes, IDs, and necessary elements.
         </p>
-        <p>
-        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
-        </p>
+        <p><a href="https://avollmar-bc.github.io/dev109/a2/index.html" target="_blank">Full Project Here...</a></p>
       </div>
       <div class="clearfix"></div>
       <div class="col-2">
-        <h2>Hello There</h2>
+        <h2>Rhombus</h2>
         <p>
-        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        Offer the user a form to submit various parameters to create an ASCII rhombus shape in a result div.
         </p>
-        <p>
-        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
-        </p>
+        <p><a href="https://avollmar-bc.github.io/dev109/a3/index.html" target="_blank">Full Project Here...</a></p>
       </div>
       <div class="col-2">
-        <h2>Hello There</h2>
-        <p>
-        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
-        </p>
-        <p>
-        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
-        </p>
-      </div>
-      <div class="clearfix"></div>
-      <div class="col-2">
-        <h2>Hello There</h2>
-        <p>
-        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
-        </p>
-        <p>
-        My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
-        </p>
-      </div>
       <div class="clearfix"></div>
     </div>
   </main>
