--- a/midterm/artifacts.html
+++ b/midterm/artifacts.html
@@ -37,6 +37,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Resume</h2>
+        <a href="https://avollmar-bc.github.io/dev109/a1/index.html" target="_blank"><img class="featured-image" src="images/artifact-1.jpg"/></a>
         <p>
         Create a one page resume with HTML, including styling.
         </p>
@@ -44,6 +45,8 @@
       </div>
       <div class="col-2">
         <h2>Chessboard</h2>
+        <a href="https://avollmar-bc.github.io/dev109/a2/index.html" target="_blank"><img class="featured-image" src="images/artifact-2.jpg"/></a>
+
         <p>
         Create a chessboard, including pieces, using a mix of HTML and CSS, including Classes, IDs, and necessary elements.
         </p>
@@ -52,6 +55,8 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Rhombus</h2>
+        <a href="https://avollmar-bc.github.io/dev109/a3/index.html" target="_blank"><img class="featured-image" src="images/artifact-3.jpg"/></a>
+
         <p>
         Offer the user a form to submit various parameters to create an ASCII rhombus shape in a result div.
         </p>
