--- a/midterm/modules.html
+++ b/midterm/modules.html
@@ -37,7 +37,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Recipe Page</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m01/index.html" target="_blank"><img class="featured-image" src="images/artifact-1.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m01/index.html" target="_blank"><img class="featured-image" src="images/module-1.jpg"/></a>
         <p>
         Create a single page with a recipe and various external links to others.
         </p>
@@ -45,7 +45,7 @@
       </div>
       <div class="col-2">
         <h2>Tables</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m02/index.html" target="_blank"><img class="featured-image" src="images/artifact-2.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m02/index.html" target="_blank"><img class="featured-image" src="images/module-2.jpg"/></a>
         <p>
         Create a page highlighting the layout and various properties of a table.
         </p>
@@ -54,7 +54,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>CSS - Cottage Garden</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m03/index.html" target="_blank"><img class="featured-image" src="images/artifact-3.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m03/index.html" target="_blank"><img class="featured-image" src="images/module-3.jpg"/></a>
         <p>
         Create a page showcasing different CSS styles.
         </p>
@@ -62,7 +62,7 @@
       </div>
       <div class="col-2">
         <h2>Columns</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m04/index.html" target="_blank"><img class="featured-image" src="images/artifact-3.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m04/index.html" target="_blank"><img class="featured-image" src="images/module-4.jpg"/></a>
         <p>
         Using CSS, create various column widths inline.
         </p>
@@ -71,7 +71,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Multiplication Table</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m05/index.html" target="_blank"><img class="featured-image" src="images/artifact-3.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m05/index.html" target="_blank"><img class="featured-image" src="images/module-5.jpg"/></a>
         <p>
         Using viewer input, display a multiplication table with the provided number.
         </p>
