modules.html title update

--- a/midterm/modules.html
+++ b/midterm/modules.html
@@ -9,7 +9,7 @@
 
 
 
-  <title>Alan V | Artifacts</title>
+  <title>Alan V | Modules</title>
 </head>
 <body>
 <!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
