contact and thank you cleanup

--- a/midterm/thank-you.html
+++ b/midterm/thank-you.html
@@ -20,7 +20,7 @@
         <a href="index.html"><span>Alan Vollmar</span></a>
       </div>
       <menu class="header-menu">
-        <li><a class="active" href="about.html">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="courses.html">Courses</a></li>
         <li><a href="artifacts.html">Artifacts</a></li>
         <li><a href="modules.html">Modules</a></li>
