--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -20,11 +20,11 @@
         <a href="index.html"><span>Alan Vollmar</span></a>
       </div>
       <menu class="header-menu">
-        <li><a class="active" href="about.html">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="courses.html">Courses</a></li>
         <li><a href="artifacts.html">Artifacts</a></li>
         <li><a href="modules.html">Modules</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a class="active" href="contact.html">Contact</a></li>
         <li><a href="creative.html">Creative</a></li>
         <li><a href="validated.html">Validation</a></li>
       </menu>
