--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -41,9 +41,12 @@
         </p>
         <div class="form-area">
             <form action="thank-you.html" method="get" name="contactForm">
-                <label type="text" name="fullName" value="Guy Incognito">Name</label><br>
-                <input type="email" name="email" value="test@123.com"><br>
-                <input type="textarea" name="comments" value="Leave any questions or comments here."><br><br>
+                <label for="fname">Name</label><br>
+                <input type="text" name="fullName" value="Guy Incognito"><br>
+                <label for="email">Email</label><br>
+                <input type="text" name="email" value="test123@compuserve.net"><br>
+                <label for="comments">Comments</label><br>
+                <textarea id="w3review" name="comments" rows="4" cols="50" value="Send me your comments and suggestions here!"></textarea><br><br>
                 <input type="submit" value="Submit">
               </form>
         </div>
