--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -46,7 +46,7 @@
                 <label for="email">Email</label><br>
                 <input type="text" name="email" value="test123@compuserve.net"><br>
                 <label for="comments">Comments</label><br>
-                <textarea id="w3review" name="comments" rows="4" cols="50" value="Send me your comments and suggestions here!"></textarea><br><br>
+                <textarea name="comments" rows="4" value="Send me your comments and suggestions here!"></textarea><br><br>
                 <input type="submit" value="Submit">
               </form>
         </div>
