about page stuff

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -34,12 +34,12 @@
       <div class="center">
         <h2>Hello There</h2>
         <p>
-        This here is the about page. A place where the site publisher would talk about themself of the group that this site represents, so i will:
+        This here is the about page. A place where the site publisher would talk about themself or the group this site represents, so i will:
         </p>
+        </div>
         <p>
         My name's Alan Vollmar, and I'm a 10 year digital marketing vet reliving my early days through this site from Scratch. It's safe to say this is an lesson in how you take CMSs for granted every day. I miss permalinks, modular widgets, preloaded libraries and, as much as I hate to say, YoastSEO.
         </p>
-      </div>
       <h3>Goals</h3>
       <p>
         My goals are simple: Eat 64 slices of Kraft American Cheese* in one sitting.
