--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -29,9 +29,23 @@
   </header>
   <main class="page-body">
     <div class="wrapper">
-      <h1>Creative Page</h1>
+      <h1>So I Made Music Once...</h1>
       <hr class="title-underline">
-      <h2>Put Creative Shit Here</h2>
+      <h2>Here are some nuggets from a younger me</h2>
+      <p>
+        Back when I was a younger man, I put life on hold to pursue a career in music. Unfortunately, things didn't line up perfectly. Close, but no cigar.<br>
+        Here are some goodies from my music days. Check out our old music <a href="https://open.spotify.com/album/7wV5x9kPWIlLDd4nIIivXH?si=Kwv9WoDZQ2iISa7vrx2HAg" target="_blank">HERE...</a>
+      </p>
+      <div class="center">
+          <video src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV">filler text</video>
+          </div>
+      <div class="clearfix"></div>
+      <div class="img-gallery">
+        <img alt="Misc band photos from back when" src="images/music-1.jpg">
+        <img alt="Misc band photos from back when" src="images/music-2.jpg">
+        <img alt="Misc band photos from back when" src="images/music-3.jpg">
+        <img alt="Misc band photos from back when" src="images/music-4.jpg">
+      </div>
     </div>
   </main>
   <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
