--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -37,8 +37,9 @@
         Here are some goodies from my music days. Check out our old music <a href="https://open.spotify.com/album/7wV5x9kPWIlLDd4nIIivXH?si=Kwv9WoDZQ2iISa7vrx2HAg" target="_blank">HERE...</a>
       </p>
       <div class="center">
-          <video src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV">filler text</video>
-          </div>
+        <video src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV">filler text</video>
+        <iframe width="570" height="321" src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV" frameborder="0"></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
+      </div>
       <div class="clearfix"></div>
       <div class="img-gallery">
         <img alt="Misc band photos from back when" src="images/music-1.jpg">
