video embed changes

--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -38,7 +38,7 @@
       </p>
       <div class="center">
         <video src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV">filler text</video>
-        <iframe width="570" height="321" src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV" frameborder="0"></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
+        <iframe width="570" height="321" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
       </div>
       <div class="clearfix"></div>
       <div class="img-gallery">
