images and video embed

--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -38,14 +38,14 @@
       </p>
       <div class="center">
         <video src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV">filler text</video>
-        <iframe width="570" height="321" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
+        <iframe width="752" height="423" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
       </div>
       <div class="clearfix"></div>
       <div class="img-gallery">
-        <img alt="Misc band photos from back when" src="images/music-1.jpg">
-        <img alt="Misc band photos from back when" src="images/music-2.jpg">
-        <img alt="Misc band photos from back when" src="images/music-3.jpg">
-        <img alt="Misc band photos from back when" src="images/music-4.jpg">
+        <img alt="Misc band photos from back when" src="images/music-1--thumb.jpg">
+        <img alt="Misc band photos from back when" src="images/music-2--thumb.jpg">
+        <img alt="Misc band photos from back when" src="images/music-3--thumb.jpg">
+        <img alt="Misc band photos from back when" src="images/music-4--thumb.jpg">
       </div>
     </div>
   </main>
