--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -42,10 +42,10 @@
       </div>
       <div class="clearfix"></div>
       <div class="img-gallery">
-        <img alt="Misc band photos from back when" src="images/music-1--thumb.jpg">
-        <img alt="Misc band photos from back when" src="images/music-2--thumb.jpg">
-        <img alt="Misc band photos from back when" src="images/music-3--thumb.jpg">
-        <img alt="Misc band photos from back when" src="images/music-4--thumb.jpg">
+        <a href="images/music-1.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-1--thumb.jpg"></a>
+        <a href="images/music-2.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-2--thumb.jpg"></a>
+        <a href="images/music-3.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-3--thumb.jpg"></a>
+        <a href="images/music-4.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-4--thumb.jpg"></a>
       </div>
     </div>
   </main>
