--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -46,6 +46,7 @@
         <a href="images/music-2.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-2--thumb.jpg"></a>
         <a href="images/music-3.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-3--thumb.jpg"></a>
         <a href="images/music-4.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-4--thumb.jpg"></a>
+        <p><em>Click to view larger version.</em></p>
       </div>
     </div>
   </main>
