--- a/midterm/creative.html
+++ b/midterm/creative.html
@@ -36,11 +36,11 @@
         Back when I was a younger man, I put life on hold to pursue a career in music. Unfortunately, things didn't line up perfectly. Close, but no cigar.<br>
         Here are some goodies from my music days. Check out our old music <a href="https://open.spotify.com/album/7wV5x9kPWIlLDd4nIIivXH?si=Kwv9WoDZQ2iISa7vrx2HAg" target="_blank">HERE...</a>
       </p>
-      <div class="col-2">
+      <div class="center">
         <video src="https://www.youtube.com/watch?v=R8yRCDZ-JIQ&ab_channel=ChasingThrillTV">filler text</video>
         <iframe width="752" height="423" src="https://www.youtube.com/embed/R8yRCDZ-JIQ?si=z9PWCNRNbMrZ1URf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <!-- rather not use iframes or embeds, but the video element only supports local video files -->
       </div>
-      <div class="img-gallery col-2">
+      <div class="img-gallery">
         <a href="images/music-1.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-1--thumb.jpg"></a>
         <a href="images/music-2.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-2--thumb.jpg"></a>
         <a href="images/music-3.jpg" target="_blank"><img alt="Misc band photos from back when" src="images/music-3--thumb.jpg"></a>
