validation image styles

--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main class="page-body">
-    <div class="wrapper">
+    <div class="wrapper validated">
       <h1>Validated</h1>
       <hr class="title-underline">
 
@@ -37,17 +37,17 @@
       </div>
       <div class="col-2">
         <h3>HTML</h3>
-        <img src="#" alt="validation screenshot">
+        <img class="featured-image" src="images/index-html.jpg" alt="validation screenshot">
       </div>
       <div class="col-2">
         <h3>CSS</h3>
-        <img src="#" alt="validation screenshot">
+        <img class="featured-image" src="images/index-css.jpg" alt="validation screenshot">
       </div>
       <div class="clearfix"></div>
       <hr class="title-underline">
 
       <div class="section-title">
-        <h2>Home Page</h2>
+        <h2>About</h2>
       </div>
       <div class="col-2">
         <h3>HTML</h3>
