--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -51,11 +51,25 @@
       </div>
       <div class="col-2">
         <h3>HTML</h3>
-        <img src="#" alt="validation screenshot">
+        <img class="featured-image" src="images/about-html.jpg" alt="validation screenshot">
       </div>
       <div class="col-2">
         <h3>CSS</h3>
-        <img src="#" alt="validation screenshot">
+        <img class="featured-image" src="images/about-css.jpg" alt="validation screenshot">
+      </div>
+      <div class="clearfix"></div>
+      <hr class="title-underline">
+
+      <div class="section-title">
+        <h2>About</h2>
+      </div>
+      <div class="col-2">
+        <h3>Courses</h3>
+        <img class="featured-image" src="images/about-html.jpg" alt="validation screenshot">
+      </div>
+      <div class="col-2">
+        <h3>CSS</h3>
+        <img class="featured-image" src="images/about-css.jpg" alt="validation screenshot">
       </div>
       <div class="clearfix"></div>
       <hr class="title-underline">
