--- a/midterm/courses.html
+++ b/midterm/courses.html
@@ -37,14 +37,15 @@
         <strong>DEV109 | Adam Brehm</strong><br />
         <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Learn More...</a>
         </p>
-      <h3>Experience & What to Gain</h3>
+        <h3>Experience & What to Gain</h3>
 
         <p>
         I've spent over 10 years in marketing for multiple B2B SaaS solutions, mainly in the MSP space, both as a vendor and a solution. Managing multiple sites on different CMS has helped me learn the ins and outs of both content management and front-end development.
         </p>
-        <p>I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.</p>
-      </p>
-      <hr class="title-underline">
+        <p>
+          I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.</p>
+        </p>
+        <hr class="title-underline">
       </section>
       <section>
         <h2>The Research Paper</h2>
@@ -53,13 +54,13 @@
         <a href="http://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=56611&" target="_blank">Learn More...</a>
         </p>
       <h3>Experience & What to Gain</h3>
-
         <p>
-       While I'm comfortable with a more informal narrative writing style, I'd like to lean more into scholarly papers to hone my professional writing skills.
+        While I'm comfortable with a more informal narrative writing style, I'd like to lean more into scholarly papers to hone my professional writing skills.
         </p>
-        <p>Ideally, I plan to gain confidence writing professional content for marketing collateral, sales resources, and vetted website content.</p>
-      </p>
-      <hr class="title-underline">
+        <p>
+        Ideally, I plan to gain confidence writing professional content for marketing collateral, sales resources, and vetted website content.</p>
+        </p>
+        <hr class="title-underline">
       </section>
       <section>
         <h2>Intermediate Algebra</h2>
@@ -67,14 +68,14 @@
         <strong>MATH99 | Helene Tate</strong><br />
         <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=12&coid=48945" target="_blank">Learn More...</a>
         </p>
-      <h3>Experience & What to Gain</h3>
-
+        <h3>Experience & What to Gain</h3>
         <p>
         Aside from development work, I've neglected my math skills since my early college days from over a decade ago. Amazing how much of it is actually applied in the workplace, as this has affected some of my work.
         </p>
-        <p>I'm looking forward to gaining the core skills required for more rigorous development work, such a larger development projects, including web apps build on popular frameworks I'be yet to get familiar with.</p>
-      </p>
-      <hr class="title-underline">
+        <p>
+        I'm looking forward to gaining the core skills required for more rigorous development work, such a larger development projects, including web apps build on popular frameworks I'be yet to get familiar with.</p>
+        </p>
+        <hr class="title-underline">
       </section>
     </div>
   </main>
