--- a/midterm/courses.html
+++ b/midterm/courses.html
@@ -43,7 +43,7 @@
         I've spent over 10 years in marketing for multiple B2B SaaS solutions, mainly in the MSP space, both as a vendor and a solution. Managing multiple sites on different CMS has helped me learn the ins and outs of both content management and front-end development.
         </p>
         <p>
-          I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.</p>
+          I plan to walk away from this class with a formal experience in learning the fundamentals of Web Development, as my experience has mainly been through my career. There's plenty I've missed that I could learn from this course.
         </p>
         <hr class="title-underline">
       </section>
@@ -58,7 +58,7 @@
         While I'm comfortable with a more informal narrative writing style, I'd like to lean more into scholarly papers to hone my professional writing skills.
         </p>
         <p>
-        Ideally, I plan to gain confidence writing professional content for marketing collateral, sales resources, and vetted website content.</p>
+        Ideally, I plan to gain confidence writing professional content for marketing collateral, sales resources, and vetted website content.
         </p>
         <hr class="title-underline">
       </section>
@@ -73,7 +73,7 @@
         Aside from development work, I've neglected my math skills since my early college days from over a decade ago. Amazing how much of it is actually applied in the workplace, as this has affected some of my work.
         </p>
         <p>
-        I'm looking forward to gaining the core skills required for more rigorous development work, such a larger development projects, including web apps build on popular frameworks I'be yet to get familiar with.</p>
+        I'm looking forward to gaining the core skills required for more rigorous development work, such a larger development projects, including web apps build on popular frameworks I'be yet to get familiar with.
         </p>
         <hr class="title-underline">
       </section>
