--- a/midterm/courses.html
+++ b/midterm/courses.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"/> <!-- Noto Sans - Open Sans Knockoff -->
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
   <title>Alan V | Courses</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
       <section>
         <h2>Intro to Web Dev</h2>
         <p>
-        <strong>DEV109 | Adam Brehm</strong><br />
+        <strong>DEV109 | Adam Brehm</strong><br>
         <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">Learn More...</a>
         </p>
         <h3>Experience & What to Gain</h3>
@@ -50,7 +50,7 @@
       <section>
         <h2>The Research Paper</h2>
         <p>
-        <strong>ENGL201 | Sarah Ghasedi</strong><br />
+        <strong>ENGL201 | Sarah Ghasedi</strong><br>
         <a href="http://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=56611&" target="_blank">Learn More...</a>
         </p>
       <h3>Experience & What to Gain</h3>
@@ -65,7 +65,7 @@
       <section>
         <h2>Intermediate Algebra</h2>
         <p>
-        <strong>MATH99 | Helene Tate</strong><br />
+        <strong>MATH99 | Helene Tate</strong><br>
         <a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=12&coid=48945" target="_blank">Learn More...</a>
         </p>
         <h3>Experience & What to Gain</h3>
