--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -65,11 +65,11 @@
       </div>
       <div class="col-2">
         <h3>Courses</h3>
-        <img class="featured-image" src="images/about-html.jpg" alt="validation screenshot">
+        <img class="featured-image" src="images/courses-html.jpg" alt="validation screenshot">
       </div>
       <div class="col-2">
         <h3>CSS</h3>
-        <img class="featured-image" src="images/about-css.jpg" alt="validation screenshot">
+        <img class="featured-image" src="images/courses-css.jpg" alt="validation screenshot">
       </div>
       <div class="clearfix"></div>
       <hr class="title-underline">
