--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -61,10 +61,10 @@
       <hr class="title-underline">
 
       <div class="section-title">
-        <h2>About</h2>
+        <h2>Courses</h2>
       </div>
       <div class="col-2">
-        <h3>Courses</h3>
+        <h3>HTML</h3>
         <img class="featured-image" src="images/courses-html.jpg" alt="validation screenshot">
       </div>
       <div class="col-2">
