--- a/midterm/artifacts.html
+++ b/midterm/artifacts.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"/> <!-- Noto Sans - Open Sans Knockoff -->
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
   <title>Alan V | Artifacts</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Resume</h2>
-        <a href="https://avollmar-bc.github.io/dev109/a1/index.html" target="_blank"><img class="featured-image" src="images/artifact-1.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/a1/index.html" target="_blank"><img class="featured-image" alt="artifact entry" src="images/artifact-1.jpg"></a>
         <p>
         Create a one page resume with HTML, including styling.
         </p>
@@ -42,7 +42,7 @@
       </div>
       <div class="col-2">
         <h2>Chessboard</h2>
-        <a href="https://avollmar-bc.github.io/dev109/a2/index.html" target="_blank"><img class="featured-image" src="images/artifact-2.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/a2/index.html" target="_blank"><img class="featured-image" alt="artifact entry" src="images/artifact-2.jpg"></a>
 
         <p>
         Create a chessboard, including pieces, using a mix of HTML and CSS, including Classes, IDs, and necessary elements.
@@ -52,7 +52,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Rhombus</h2>
-        <a href="https://avollmar-bc.github.io/dev109/a3/index.html" target="_blank"><img class="featured-image" src="images/artifact-3.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/a3/index.html" target="_blank"><img class="featured-image" alt="artifact entry" src="images/artifact-3.jpg"></a>
 
         <p>
         Offer the user a form to submit various parameters to create an ASCII rhombus shape in a result div.
