--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -74,6 +74,19 @@
       <div class="clearfix"></div>
       <hr class="title-underline">
 
+      <div class="section-title">
+        <h2>Artifacts</h2>
+      </div>
+      <div class="col-2">
+        <h3>HTML</h3>
+        <img class="featured-image" src="images/artifacts-html.jpg" alt="validation screenshot">
+      </div>
+      <div class="col-2">
+        <h3>CSS</h3>
+        <img class="featured-image" src="images/artifacts-css.jpg" alt="validation screenshot">
+      </div>
+      <div class="clearfix"></div>
+      <hr class="title-underline">
 
   </main>
   <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
