--- a/midterm/modules.html
+++ b/midterm/modules.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"/> <!-- Noto Sans - Open Sans Knockoff -->
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/noto-sans" type="text/css"> <!-- Noto Sans - Open Sans Knockoff -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/bebusneuebold-news" type="text/css"> <!-- Bebas Neue -->
   <title>Alan V | Modules</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Recipe Page</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m01/index.html" target="_blank"><img class="featured-image" src="images/module-1.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m01/index.html" target="_blank"><img class="featured-image" alt="module featured image" src="images/module-1.jpg"></a>
         <p>
         Create a single page with a recipe and various external links to others.
         </p>
@@ -42,7 +42,7 @@
       </div>
       <div class="col-2">
         <h2>Tables</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m02/index.html" target="_blank"><img class="featured-image" src="images/module-2.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m02/index.html" target="_blank"><img class="featured-image" alt="module featured image" src="images/module-2.jpg"></a>
         <p>
         Create a page highlighting the layout and various properties of a table.
         </p>
@@ -51,7 +51,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>CSS - Cottage Garden</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m03/index.html" target="_blank"><img class="featured-image" src="images/module-3.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m03/index.html" target="_blank"><img class="featured-image" alt="module featured image" src="images/module-3.jpg"></a>
         <p>
         Create a page showcasing different CSS styles.
         </p>
@@ -59,7 +59,7 @@
       </div>
       <div class="col-2">
         <h2>Columns</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m04/index.html" target="_blank"><img class="featured-image" src="images/module-4.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m04/index.html" target="_blank"><img class="featured-image" alt="module featured image" src="images/module-4.jpg"></a>
         <p>
         Using CSS, create various column widths inline.
         </p>
@@ -68,7 +68,7 @@
       <div class="clearfix"></div>
       <div class="col-2">
         <h2>Multiplication Table</h2>
-        <a href="https://avollmar-bc.github.io/dev109/m05/index.html" target="_blank"><img class="featured-image" src="images/module-5.jpg"/></a>
+        <a href="https://avollmar-bc.github.io/dev109/m05/index.html" target="_blank"><img class="featured-image" alt="module featured image" src="images/module-5.jpg"></a>
         <p>
         Using viewer input, display a multiplication table with the provided number.
         </p>
